log
Thu Mar 17 20:31:15 HSP 2022: 
 list.c | 45 ++++++++++++++++++++++++++++++++++++++-------
 1 file changed, 38 insertions(+), 7 deletions(-)
 tests:  9|3
total_score: 35/70
251463e
Thu Mar 17 20:38:09 HSP 2022: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  9|3
total_score: 35/70
d13497d
Thu Mar 17 20:41:11 HSP 2022: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  9|3
total_score: 35/70
d14f369
Thu Mar 17 21:26:26 HSP 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
60d0c96
Sat Mar 19 17:24:34 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
ab090cb
Sat Mar 19 17:25:16 HSP 2022: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:79:12: error: 'return' with a value, in function returning void [-Werror]
     return NULL;
            ^~~~
list.c:76:6: note: declared here
 void pushFront(List * list, void * data) {
      ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
b79855f
Sat Mar 19 17:35:29 HSP 2022: 
 list.c | 7 ++-----
 1 file changed, 2 insertions(+), 5 deletions(-)
 tests:  9|3
total_score: 35/70
69e32a0
Sat Mar 19 17:41:45 HSP 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
5929d4e
Sat Mar 19 17:42:14 HSP 2022: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
064a0b3
Sat Mar 19 17:49:14 HSP 2022: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  0|0
942c03a
Sat Mar 19 17:49:34 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
496c938
Sat Mar 19 17:50:07 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
d8085bd
Sat Mar 19 17:50:32 HSP 2022: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
979f111
Sat Mar 19 17:54:36 HSP 2022: 
 list.c | 12 +++---------
 1 file changed, 3 insertions(+), 9 deletions(-)
In file included from test.c:5:0:
list.c: In function 'pushFront':
list.c:78:9: error: unused variable 'temp' [-Werror=unused-variable]
   Node* temp = (list->head);
         ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
6bb8ad4
Sat Mar 19 17:54:45 HSP 2022: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  10|2
total_score: 45/70
ea8df7a
Sat Mar 19 17:58:32 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'pushCurrent':
list.c:92:9: error: unused variable 'nodoLocal' [-Werror=unused-variable]
   Node* nodoLocal = createNode(data);
         ^~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
3756b37
Sat Mar 19 18:02:50 HSP 2022: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  10|2
total_score: 45/70
eddcb28
Sat Mar 19 18:04:14 HSP 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
86cb460
Sat Mar 19 18:05:35 HSP 2022: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  10|2
total_score: 45/70
995c868
Sat Mar 19 18:09:22 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6247f9b
Sat Mar 19 18:09:58 HSP 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
cb3ce45
Sat Mar 19 18:11:08 HSP 2022: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
2f8ad42
Sat Mar 19 18:12:21 HSP 2022: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  10|2
total_score: 45/70
7c53d10
Sat Mar 19 18:13:38 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
015bfcf
Sat Mar 19 18:14:11 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
5afa374
Sat Mar 19 18:17:39 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
32069c4
Sat Mar 19 18:22:19 HSP 2022: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
8e44135
Sat Mar 19 18:23:24 HSP 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
8a70517
Sat Mar 19 18:30:44 HSP 2022: 
 list.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
e6392d7
Sat Mar 19 18:31:09 HSP 2022: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
2c0acf8
Sat Mar 19 18:33:32 HSP 2022: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
9202741
Sat Mar 19 18:33:50 HSP 2022: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  10|2
total_score: 45/70
7d4a637
